# ai-interview-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: documents.py  evaluations.py  questions.py
app/: main.py
data/uploads/: README.md
docs/: experiment_log.md  project_spec_v1.md
kb/: async_sync.md  caching.md  cors.md  docker.md  fastapi.md  http.md  jwt.md  jwt_logout_invalidation.md  oauth.md  postgresql.md  postgresql_index.md  session_auth.md  session_vs_token.md  spring.md  spring_bean_scope.md  spring_boot.md  spring_di.md  spring_layered_architecture.md  token_auth.md  transaction.md
rag/: chains.py  config.py  embeddings.py  graph.py  graph_nodes.py  graph_state.py  llm_utils.py  loader.py  prompts.py  schemas.py  vectorstore.py
scripts/: check_acid_retrieval.py  check_agent_graph.py  check_chain_b.py  check_context_chain.py  check_context_precision.py  check_evaluation_context_chain.py  check_evaluation_prompt.py  check_kb_retriever.py  check_learning_tip.py  check_ragas_by_level.py  check_retriever.py  check_score_branches.py  compare_embeddings.py  compare_embeddings_retrieval_eval.py  inspect_low_faithfulness.py  load_kb.py  load_kb_gemini.py  measure_api_latency.py  run_calibration.py  run_calibration_graph.py  run_context_precision.py  run_ragas.py  run_retrieval_eval.py  scan_short_chunks.py  test_semantic_retrieval.py
scripts/archive/: check_chain_a.py  check_gemini.py  (+9 more)
tests/: test_agent_routing.py  test_loader.py
(+3 files in other folders)
