[project]
name = "ai-interview-coach"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets==5.0.0",
    "fastapi==0.138.0",
    "langchain==1.3.11",
    "langchain-chroma==1.1.0",
    "langchain-community==0.3.31",
    "langchain-google-genai==4.2.5",
    "langchain-huggingface==1.2.2",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.6",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "ragas==0.3.9",
    "sentence-transformers==5.6.0",
    "uvicorn==0.49.0",
]
